--- a/estil.css
+++ b/estil.css
@@ -40,6 +40,10 @@ div{
 
 option, select{
     font-size: 15px;
+    padding: 2px;
+    border-radius: 8px;
+    background-color: rgb(253, 201, 133);
+    border-color: rgb(0, 0, 0);
 }
 
 input{
@@ -57,6 +61,10 @@ label{
 
 .botones{
     margin-bottom: 8px;
+}
+
+.fecha{
+    margin-top: 6px;
 }
 
 .boton{
